--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,14 @@ python -m venv django_env
  python manage.py runserver
 
 
+## For all installation in  a one command
+
+python3 -m venv env
+source env/bin/activate
+pip install --upgrade pip
+pip install django djangorestframework django-cors-headers Pillow
+
+
  // For migration and run
 
 source django_env/bin/activate
@@ -133,3 +141,15 @@ Save and exit nano:
 ❌ Feed Back 
 ❌ Food/Item
 ❌ Dinning/Canteen /Shop
+
+
+
+
+### install after pull
+
+pip install --upgrade pip
+pip install django-cors-headers djangorestframework Pillow
+
+
+python manage.py makemigrations
+python manage.py migrate
