--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -138,9 +138,9 @@ Save and exit nano:
 ✅ Event
 ✅ Official/Transaction
 ✅ 
-❌ Feed Back 
-❌ Food/Item
-❌ Dinning/Canteen /Shop
+✅ Feed Back 
+✅ Food/Item
+✅ Dinning/Canteen /Shop
 
 
 
