--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
